kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: heart-of-news
  labels:
    name: heart-of-news
    app: heart-of-news
