kubernetes/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: heart-of-news
    component: api
spec:
  selector:
    app: heart-of-news
    component: api
  ports:
  - port: 8000
    targetPort: 8000
    name: http
  type: ClusterIP
